--- a/backend/package.json
+++ b/backend/package.json
@@ -5,30 +5,37 @@
   "main": "server.js",
   "scripts": {
     "test": "jest",
-    "dev": "tsx --watch src/main/server.ts"
+    "dev": "tsx --watch src/main/server.ts",
+    "lint": "eslint"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@prisma/client": "^6.1.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
     "postgres": "^3.4.5",
-    "prisma": "^6.1.0"
+    "prisma": "^6.1.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "eslint": "^9.17.0",
+    "globals": "^15.14.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.2"
   }
 }
