--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "syncfrends-backend",
   "version": "1.0.0",
   "description": "A platform that handles real-time chatting and video",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "tsx --watch src/main/server.ts",
+    "dev": "tsx --watch src/main/index.ts",
     "lint": "eslint"
   },
   "keywords": [],
@@ -15,13 +15,18 @@
     "@prisma/client": "^6.1.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^7.5.0",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.16",
     "postgres": "^3.4.5",
     "prisma": "^6.1.0",
+    "randomstring": "^1.3.0",
+    "uuid": "^11.0.3",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -30,6 +35,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/nodemailer": "^6.4.17",
+    "@types/randomstring": "^1.3.0",
     "eslint": "^9.17.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
