--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "A platform that handles real-time chatting and video",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test:watch": "jest --watch",
     "dev": "tsx --watch src/main/index.ts",
     "lint": "eslint"
   },
@@ -41,6 +41,7 @@
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.2"
