--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.16",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "postgres": "^3.4.5",
     "prisma": "^6.1.0",
     "randomstring": "^1.3.0",
@@ -38,6 +40,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/nodemailer": "^6.4.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/randomstring": "^1.3.0",
     "eslint": "^9.17.0",
     "globals": "^15.14.0",
